[package]
name = "genomics-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
